--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Block Da Kenzie</title>
+    <link rel="icon" href="https://kenzie.com.br/favicon.jpeg">
+</head>
+    <body>
+        <section>
+            <h1>Blog Da Kenzie</h1>
+        </section>
+        <section>
+            <article>
+                <h2>Quais as linguagens de programação mais bem pagas</h2>
+                <p>
+                    O mercado de tecnologia é muito dinâmico, por essa razão,  programadores, desenvolvedores e profissionais de TI <br>
+                    têm sido cada vez mais valorizados. Caso esteja analisando entrar nessa área, acompanhe as linguagens de programação <br>
+                    que estão entre as mais bem pagas
+                </p>
+                <a href="https://kenzie.com.br/blog/linguagens-de-programacao-mais-bem-pagas/">Continue Lendo Aqui</a>
+            <article>
+        </section>
 
+        <section>
+            <article>
+                <h2>A Importancia De Um Segundo Idioma Para a Área de TI</h2>
+                <p>
+                    Aprender um novo idioma pode abrir mais portas do que você imagina. Nos dias atuais saber uma segunda língua <br>
+                    já é praticamente um requisito quase que essencial. <br><br>
+
+                    Neste artigo iremos te mostrar como aprender um segundo idioma pode te auxiliar na sua carreira profissional <br>
+                    e também entender a importância desse conhecimento na área de TI. Continue sua leitura!
+                </p>
+                <a href="https://kenzie.com.br/blog/segundo-idioma/">Continue Lendo Aqui</a>
+            </article>
+        </section>
+
+        <section>
+            <article>
+                <h2>O Que é Um Valor Semantico e Sua Importancia Na Programação</h2>
+                <p>
+                    Assim como na gramática, em programação, a semântica trata da observação do significado das expressões,<br>
+                    das unidades de programas e das informações <br><br>
+
+                    Acompanhe este artigo para compreender o que é valor semântico dentro da programação e qual sua importância
+                </p>
+                <a href="https://kenzie.com.br/blog/valor-semantico/">Continue Lendo Aqui</a>
+            </article>    
+        </section>
+
+        <section>
+            <article>
+                <h2>O que é um placeholder e como ultilizá-lo em seu projeto</h2>
+                <p>
+                    Se você é um dev, provavelmente já conhece o termo placeholder. Afinal, dizem que ele salva os devs que <br>
+                    já fizeram algum “remendo” para poder simular o que o placeholder faz de forma tão fácil <br><br>
+
+                    Mas, fique tranquilo(a), se você nunca ouviu sobre esse atributo, continue acompanhando este artigo e descubra <br>
+                    mais sobre o que é placeholder e como utilizá-lo em seu projeto
+                </p>
+                <a href="https://kenzie.com.br/blog/placeholder/">Continue Lendo Aqui</a>
+            </article>
+        </section>
+        
+        <section>
+            <h2>Insira seu e-mai para receber novas notificações em prmeira mão</h2>
+            <form>
+                <label for="e-mail">Email</label>
+                <input type="email" name="Email" id="e-mail" placeholder="Insira seu Email" required >
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </body>
+</html>
